--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,11 +5,11 @@ body {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/restaurant.png");
+  background-image: url("../img/fotografa.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
-  height: 500px;
+  height: 600px;
 }
 
 /* Mis trabajos */
