Cambie color y bg de todos los botones

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -2,6 +2,11 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
+.nombre {
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.55);
+  border-color: rgba(255, 255, 255, 0.1);
+}
 /* Hero Section */
 
 #Hero-Section {
